--- a/views/Area.xml
+++ b/views/Area.xml
@@ -1,49 +1,40 @@
 <odoo>
      
-       <record model="ir.ui.view" id="Area_form_view">
+        <record model="ir.ui.view" id="Area_form_view">
           <field name="name">Area.form</field>
           <field name="model">NaturalParks.Area</field>
           <field name="arch" type="xml">
-              <form string="Area Form">
-                  <sheet>
-                     <group>
+                <form string="Area Form">
+                    <sheet>
+                      <group>
                         <field name="name"/>
                         <field name="Extension"/>
-                        <field name="NaturalparkID"/>
+                        <field name="NaturalParkID"/>
                         <field name="CommunityID"/>
-                     </group>
-                  </sheet>
-              </form>
+                      </group>
+                    </sheet>
+                </form>
           </field>
-       </record>
-
-       <record model="ir.ui.view" id="Area_graph_view">
-          <field name="name">Area.graph</field>
-          <field name="model">NaturalParks.Area</field>
-          <field name="arch" type="xml">
-              <graph string="Area graph">
-                        <field name="name"/>
-                        <field name="Extension" type="measure"/>
-              </graph>
-          </field>
-       </record>
-
-       <record model="ir.ui.view" id="Area_tree_view">
-          <field name="name">Area.tree</field>
-          <field name="model">NaturalParks.Area</field>
-          <field name="arch" type="xml">
-              <tree string="Area Tree">
-                        <field name="name"/>
-                        <field name="Extension"/>
-                        <field name="NaturalparkID"/>
-                        <field name="CommunityID"/>                
-              </tree>
-          </field>
-       </record>
+        </record>
 
        
 
-       <record model="ir.ui.view" id="Area_search_view">
+        <record model="ir.ui.view" id="Area_tree_view">
+            <field name="name">Area.tree</field>
+            <field name="model">NaturalParks.Area</field>
+            <field name="arch" type="xml">
+                <tree string="Area Tree">
+                    <field name="name"/>
+                    <field name="Extension"/>
+                    <field name="NaturalParkID"/>
+                    <field name="CommunityID"/>                
+                </tree>
+            </field>
+        </record>
+
+       
+
+        <record model="ir.ui.view" id="Area_search_view">
             <field name="name">Area.search</field>
             <field name="model">NaturalParks.Area</field>
             <field name="arch" type="xml">
@@ -57,13 +48,13 @@
             </field>
         </record>
 
-       <record model="ir.ui.view" id="Area_list_action">
+        <record model="ir.ui.view" id="Area_list_action">
           <field name="name">Area</field>
           <field name="res_model">NaturalParks.Area</field>
           <field name="view_mode">form,tree,search</field>
-          <field name="help" type="html">
-          </field>
-       </record>
+          <field name="help" type="html"></field>
+          
+        </record>
 
 
        <menuitem id="Area_menu" name="Area"
