--- a/views/ManagementPer.xml
+++ b/views/ManagementPer.xml
@@ -1,6 +1,6 @@
 <odoo>
 
-   <record model="ir.ui.view" id="ManagementPer_form_view">
+        <record model="ir.ui.view" id="ManagementPer_form_view">
             <field name="name">ManagementPer.form</field>
             <field name="model">NaturalParks.ManagementPer</field>
             <field name="arch" type="xml">
@@ -45,34 +45,29 @@
         <record model="ir.ui.view" id="ManagementPer_list_action">
           <field name="name">ManagementPer</field>
           <field name="res_model">NaturalParks.ManagementPer</field>
-          <field name="view_mode">form,tree,search</field>
+          <field name="view_mode">form,tree</field>
           <field name="help" type="html">
           </field>
-       </record>
+        </record>
 
        <record model="ir.ui.view" id="ManagementPer_search_view">
-        <field name="name">ManagementPer.search</field>
-        <field name="model">NaturalParks.ManagementPer</field>
-        <field name="arch" type="xml">
-            <search>
-                <field name="name"/>
-                <field name="DNI"/>
-                <field name="SSNumber"/>
-                <filter name="HighSalary" string="High Salary"
-                        domain="[('Salary', '&gt;', 20000)]"/>
-                <filter name="LowSalary" string="Low Salary"
-                        domain="[('Salary', '&lt;', 20000)]"/>
-                <group string="Group By">
-                    <filter name="by_NaturalPark" string="Natural Park"
-                            context="{'group_by': 'NaturalParkID'}"/>
-                </group>
-                <group string="Group By">
-                    <filter name="by_NaturalPark" string="NaturalPark"
-                            context="{'group_by': 'NaturalParkID'}"/>
-                </group>
-            </search>
-        </field>
-    </record>
+           <field name="name">ManagementPer.search</field>
+           <field name="model">NaturalParks.ManagementPer</field>
+           <field name="arch" type="xml">
+               <search>
+                   <field name="name"/>
+                   <field name="DNI"/>
+                   <field name="SSNumber"/>
+                   <filter name="HighSalary" string="High Salary"
+                           domain="[('Salary', '&gt;', 20000)]"/>
+                   <filter name="LowSalary" string="Low Salary"
+                           domain="[('Salary', '&lt;', 20000)]"/>
+                   <group string="Group By">
+                       <filter name="by_NaturalPark" string="Natural Park"
+                               context="{'group_by': 'NaturalParkID'}"/>
+               </search>
+           </field>
+       </record>
 
        <menuitem id="ManagementPer_menu" name="ManagementPer"
          parent="ParkPersonal_menu"
