--- a/views/MineralSpe.xml
+++ b/views/MineralSpe.xml
@@ -1,6 +1,6 @@
 <odoo>
 
-   <record model="ir.ui.view" id="MineralSpe_form_view">
+        <record model="ir.ui.view" id="MineralSpe_form_view">
             <field name="name">MineralSpe.form</field>
             <field name="model">NaturalParks.MineralSpeSpe</field>
             <field name="arch" type="xml">
@@ -8,7 +8,7 @@
                     <sheet>
                         <group>
                             <field name="name"/>
-                            <field name="Vulgarname"/>
+                            <field name="VulgarName"/>
                             <field name="AreaIDS"/>
                             <field name="MineralType"/>
                         </group>
@@ -25,7 +25,7 @@
                     <sheet>
                         <group>
                             <field name="name"/>
-                            <field name="Vulgarname"/>
+                            <field name="VulgarName"/>
                             <field name="AreaIDS"/>
                             <field name="MineralType"/>
                         </group>
@@ -37,10 +37,10 @@
         <record model="ir.ui.view" id="MineralSpe_list_action">
           <field name="name">MineralSpe</field>
           <field name="res_model">NaturalParks.MineralSpe</field>
-          <field name="view_mode">form,tree,search</field>
+          <field name="view_mode">form,tree</field>
           <field name="help" type="html">
           </field>
-       </record>
+        </record>
 
        <record model="ir.ui.view" id="MineralSpe_search_view">
             <field name="name">MineralSpe.search</field>
@@ -48,7 +48,7 @@
             <field name="arch" type="xml">
                 <search>
                     <field name="name"/>
-                    <field name="VulgarNameame"/>
+                    <field name="VulgarName"/>
                     <filter name="stone" string="Stone"
                             domain="[('MineralType', '=', 'stone')]"/>
                     <filter name="crystal" string="Crystal"
